<resources>
    <string name="app_name">FuelDeliveryApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="tv_amount_of_fuel">Input amount of fuel: </string>
    <string name="et_amount_of_fuel">500</string>
    <string name="tv_select_city">Select source city</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title_dialog_add_delivery">Creating new delivery</string>
    <string name="title_dialog_add_order">Creation new order</string>
    <string name="amount_of_fuel_left">Fuel left: %s</string>
    <string name="amount_of_fuel_at_beginning">Fuel: %s</string>
    <string name="cb_random">Random</string>
    <string name="tv_amount_of_fuel_for_order">Input amount of fuel: </string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
</resources>
